--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "vue-loader": "15.9.8",
+    "vue-template-compiler": "2.6.14",
     "webpack": "^5.68.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
